Feedback Redmineの投稿設定と導入手順を改善
